2.8 Opening project in Blender Crashes #57878

Closed
opened 2018-11-16 20:14:00 +01:00 by Nathanyaahla Yasharahla · 5 comments

Alienware 17R4 i7 Core-7820HK CPU @ 2.90 GHz
Graphics GTX 1080 8GB

2.80.30

This project was working just great, and when i started to change one of the materials under (Properties>Material>) blender crashed.

(note i was unable to even change the material, upon selecting the material, it crashed.)

Now the project crashes every time i open it.Gene-Bobs_Burgers1.0 - 2.8.blend

Alienware 17R4 i7 Core-7820HK CPU @ 2.90 GHz Graphics GTX 1080 8GB 2.80.30 This project was working just great, and when i started to change one of the materials under (Properties>Material>) blender crashed. (note i was unable to even change the material, upon selecting the material, it crashed.) Now the project crashes every time i open it.[Gene-Bobs_Burgers1.0 - 2.8.blend](https://archive.blender.org/developer/F5588662/Gene-Bobs_Burgers1.0_-_2.8.blend)

Added subscriber: @Nathanyaahla

Added subscriber: @Nathanyaahla

Added subscriber: @frans67

Added subscriber: @frans67

Can confirm the crash with Blender2.8 (Hash: a421cfa8d3) under Ubuntu.

Can confirm the crash with Blender2.8 (Hash: a421cfa8d31) under Ubuntu.
Bastien Montagne self-assigned this 2018-11-29 15:47:12 +01:00

This issue was referenced by 4c2a3b4701

This issue was referenced by 4c2a3b47014c086ad2856524ee3d542d5ba1d245

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57878
No description provided.