Fix T57878: 2.8 Opening project in Blender Crashes.

Crash was due to some modifier trying to access the editmesh of its
target just after loading, when that editmesh has not yet been
re-created...